# tap-intercom

./: README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_intercom/: client.py  schemas.py  streams.py  tap.py
tests/: test_core.py
