[project]
name = "tap-intercom"
version = "0.0.1"
description = "`tap-intercom` is a Singer tap for Intercom, built with the Meltano Singer SDK."
readme = "README.md"
authors = [{ name = "Tobias Cadee", email = "tobias.cadee@ticketswap.com" }]
keywords = [
    "ELT",
    "Intercom",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "Apache-2.0"
license-file = "LICENSE"
requires-python = ">=3.9"
dependencies = [
    "singer-sdk>=0.42.1",
    "fs-s3fs",
    "requests",
]

[project.optional-dependencies]
s3 = [
    "s3fs~=2025.5.0",
]

[project.scripts]
# CLI declaration
tap-intercom = 'tap_intercom.tap:TapIntercom.cli'

[dependency-groups]
dev = [
    { include-group = "test" },
    { include-group = "typing" },
]
test = [
    "pytest>=8",
    "pytest-github-actions-annotate-failures>=0.3",
    "singer-sdk[testing]",
    "ruff>=0.8.4",
]
typing = [
    "mypy>=1.16.0",
    "types-requests",
]

[tool.pytest.ini_options]
addopts = [
    "--durations=10",
]

[tool.mypy]
warn_unused_configs = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
    "ANN001",  # missing-type-annotation-for-function-argument
    "ANN201",  # missing-return-type-annotation-for-public-function
    "D102",    # missing-docstring-in-public-method
    "D101",    # missing-docstring-in-public-class
    "ARG002",  # unused-method-argument
    "ANN002",  # missing-type-annotation-for-*args
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = [
    "hatchling>=1,<2",
]
build-backend = "hatchling.build"

# This configuration can be used to customize tox tests as well as other test frameworks like flake8 and mypy
[tool.tox]
min_version = "4.22"
requires = [
    "tox>=4.22",
    "tox-uv",
]
env_list = [
    "linting",
    "typing",
    "py313",
    "py312",
    "py311",
    "py310",
    "py39",
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [
    "GITHUB_*",
    "TAP_INTERCOM_*",
]
dependency_groups = [ "test" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.typing]
dependency_groups = [ "test", "typing" ]
commands = [ [ "mypy", { replace = "posargs", default = [ "tap_intercom", "tests" ], extend = true } ] ]

[tool.tox.env.linting]
dependency_groups = [ "test" ]
commands = [ [ "ruff", "check", { replace = "posargs", default = [ "tap_intercom", "tests" ], extend = true } ] ]
